--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.1.0"
+    buildToolsVersion "26.+"
 
     defaultConfig {
         applicationId "org.androidbootmanager.app"
         minSdkVersion 26
         targetSdkVersion 26
-        versionCode 1
-        versionName "0.0.0"
+        versionCode 2
+        versionName "0.0.1"
     }
     buildTypes {
         release {
@@ -17,6 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+	compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+repositories {
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
