--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Hello, and thanks for contributing at Android Boot Manager! As this is your first issie, we give you this message :) Please don't forget to make sure everything important is in the issue. Thanks!'
+        issue-message: 'Hello, and thanks for contributing at Android Boot Manager! As this is your first issue, we give you this message :) Please do not forget to make sure everything important is in the issue. Thanks!'
         pr-message: 'Hello, and thanks for your first PR! We love to see that you help to develop Android Boot Manager! :)'
