--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,3 +19,7 @@ jobs:
         java-version: 1.8
     - name: Build with Gradle
       run: ./gradlew build
+    - uses: actions/upload-artifact@v1
+      with:
+        name: apk-debug.apk
+        path: app/build/outputs/apk/app-debug.apk
