Make app translatable by extracting string resources

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
 		<activity
 			android:name=".ConfiguratorActivity"
-			android:label="Configurator">
+			android:label="@string/configurator">
 		</activity>
     </application>
 
