--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,4 +22,4 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: apk-debug.apk
-        path: app/build/outputs/apk/app-debug.apk
+        path: app/build/outputs/apk/
