--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,5 +21,5 @@ jobs:
       run: ./gradlew build
     - uses: actions/upload-artifact@v1
       with:
-        name: apk-debug.apk
+        name: apks.zip
         path: app/build/outputs/apk/
