--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run: git submodule update --init
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
