--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+	compile 'com.android.support:design:25.0.0'
 }
