--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-	android:resizeableActivity = "true">
+	    android:resizeableActivity = "true"
+		android:installLocation="internalOnly">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
