--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - run: git submodule update --init
+    - name: Download submodules
+      run: ./buildscripts/checkout-submodules.sh
+    - name: Update submodules
+      run: ./buildscripts/update-submodules.sh
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
