Slightly adjust CI

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,11 +26,12 @@ jobs:
     - name: Sign APK
       uses: r0adkll/sign-android-release@v1
       with:
-        releaseDirectory: app/build/outputs/apk/
+        releaseDirectory: app/build/outputs/apk/app-release-unsigned.apk
         signingKeyBase64: ${{ secrets.SIGNING_KEY }}
         alias: ${{ secrets.ALIAS }}
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
         keyPassword: ${{ secrets.KEY_PASSWORD }}
+    - run: cp $SIGNED_RELEASE_FILE app/build/outputs/app-final.apk
     - uses: actions/upload-artifact@v1
       with:
         name: apks
