--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,7 +31,8 @@ jobs:
         alias: ${{ secrets.ALIAS }}
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
         keyPassword: ${{ secrets.KEY_PASSWORD }}
-    - run: cp $SIGNED_RELEASE_FILE app/build/outputs/app-final.apk
+    - name: Copy signed apk to the right place
+      run: cp $SIGNED_RELEASE_FILE app/build/outputs/app-final.apk
     - uses: actions/upload-artifact@v1
       with:
         name: apks
