--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout git repository
+      uses: actions/checkout@v2
     - name: Download submodules
       run: ./buildutils/clone-submodules.sh
     - name: Update submodules
