--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.1"
 
     defaultConfig {
         applicationId "org.androidbootmanager.app"
         minSdkVersion 25
-        targetSdkVersion 25
-        versionCode 1000
-        versionName "0.1.0"
+        //noinspection OldTargetApi
+        targetSdkVersion 27
+        versionCode 1010
+        versionName "0.1.1-pre1"
     }
     signingConfigs {
         release {
@@ -25,25 +26,29 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-	    if (project.hasProperty('ABM_RELEASE_KEY_ALIAS')) {
-	    	signingConfig signingConfigs.release
-	    }
+	        if (project.hasProperty('ABM_RELEASE_KEY_ALIAS')) {
+	    	    signingConfig signingConfigs.release
+	        }
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     dexOptions {
         javaMaxHeapSize "2g"
     }
-} 
-
-repositories {
-    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-	compile 'com.android.support:design:25.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+	implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    
+    // DONT REMOVE THIS, AVOID CRASH
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
