--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,13 @@
 buildscript {
     repositories {
         jcenter()
-	    maven {
-            url 'https://maven.google.com'
-        }
+	    google()
         maven {
             url 'https://jitpack.io'
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.+'
+        classpath 'com.android.tools.build:gradle:4.0.+'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,5 +19,13 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
+        maven {
+            url 'https://jitpack.io'
+        }
+    }
+
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:all"
     }
 }
