--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 	    android:resizeableActivity = "true"
 		android:installLocation="internalOnly">
         <activity
-            android:name=".MainActivity"
+            android:name=".legacy.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
 		<activity
-			android:name=".ConfiguratorActivity"
+			android:name=".legacy.ConfiguratorActivity"
 			android:label="@string/configurator">
 		</activity>
     </application>
