--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,17 @@ buildscript {
     repositories {
         jcenter()
 	    google()
+        mavenCentral()
         maven {
             url 'https://jitpack.io'
+        }
+        maven {
+            url "https://plugins.gradle.org/m2/"
         }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.4.2"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +25,7 @@ allprojects {
     repositories {
         jcenter()
         google()
+        mavenCentral()
         maven {
             url 'https://jitpack.io'
         }
