--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Checkout git repository
       uses: actions/checkout@v2
+    - name: Silent git warning by configuring pull strategy
+      run: git config --global pull.ff only
     - name: Download submodules
       run: ./buildutils/clone-submodules.sh
     - name: Update submodules
