--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/AppTheme"
+        android:extractNativeLibs="true"
         tools:replace="android:allowBackup">
         <activity android:name=".ui.activities.SplashActivity">
             <intent-filter>
