--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,18 +24,12 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Extract signing keystore
+      run: echo ${{ secrets.SIGNING_KEY }} | base64 -d  > ~/abm.keystore
+    - name: Set signing configuration
+      run: echo ${{ secrets.KEY_SETTINGS }} | base64 -d >> ~/.gradle/gradle.properties
     - name: Build with Gradle
       run: ./gradlew build
-    - name: Sign APK
-      uses: r0adkll/sign-android-release@v1
-      with:
-        releaseDirectory: app/build/outputs/apk/release/
-        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-        alias: android
-        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-        keyPassword: ${{ secrets.KEY_PASSWORD }}
-    - name: Copy signed apk to the right place
-      run: cp $SIGNED_RELEASE_FILE app/build/outputs/apk/app-final.apk
     - name: Upload apks (1/2)
       uses: actions/upload-artifact@v2
       with:
@@ -44,5 +38,5 @@ jobs:
     - name: Upload apks (2/2)
       uses: actions/upload-artifact@v2
       with:
-        name: app-final.apk
-        path: app/build/outputs/apk/app-final.apk
+        name: app-release.apk
+        path: app/build/outputs/apk/release/app-release.apk
