--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,17 +20,23 @@ android {
                 storePassword ABM_RELEASE_STORE_PASSWORD
                 keyAlias ABM_RELEASE_KEY_ALIAS
                 keyPassword ABM_RELEASE_KEY_PASSWORD
+                v1SigningEnabled true
+                v2SigningEnabled true
             }
         }
     }
     buildTypes {
         release {
-            zipAlignEnabled true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 	        if (project.hasProperty('ABM_RELEASE_KEY_ALIAS')) {
 	    	    signingConfig signingConfigs.release
 	        }
+        }
+        debug {
+            if (project.hasProperty('ABM_RELEASE_KEY_ALIAS')) {
+                signingConfig signingConfigs.release
+            }
         }
     }
     compileOptions {
