--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Extract signing keystore
       run: echo ${{ secrets.SIGNING_KEY }} | base64 -d > ~/abm.keystore
     - name: Set signing configuration
-      run: echo ${{ secrets.KEY_SETTINGS }} | base64 -d >> ~/.gradle/gradle.properties
+      run: echo ${{ secrets.KEY_SETTINGS }} | base64 -d > ~/.gradle/gradle.properties
     - name: Build with Gradle
       run: ./gradlew build
     - name: Upload apks (1/2)
