We are getting to an finished Installer
* I already run terminal commands with live output!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="false"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".ui.wizard.WizardActivity" />
+        <activity android:name=".ui.wizard.WizardActivity"
+                  android:theme="@style/AppTheme" />
         <activity android:name=".ui.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
