--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,12 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".legacy.MainActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:exported="true"/>
         <activity
             android:name=".legacy.ConfiguratorActivity"
-            android:label="@string/configurator" />
+            android:label="@string/configurator"
+            android:exported="true"/>
     </application>
 
 </manifest>
