--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>App</name>
-	<comment>Project App created by Buildship.</comment>
+	<comment>Android Boot Manager</comment>
 	<projects>
 	</projects>
 	<buildSpec>
