--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         // we're not going to google play
         //noinspection OldTargetApi
         targetSdkVersion 27
-        versionCode 2010
-        versionName "0.2.0-rc1"
+        versionCode 2020
+        versionName "0.2.0-rc2"
     }
     signingConfigs {
         release {
@@ -53,7 +53,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 	implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.3.0-rc01'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
