--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,11 @@
         android:supportsRtl="false"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".ui.wizard.WizardActivity"
-                  android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ui.debug.DebugActivity" />
+        <activity
+            android:name=".ui.wizard.WizardActivity"
+            android:theme="@style/AppTheme" />
         <activity android:name=".ui.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
