--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:enabled="false"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme">
             <intent-filter>
