--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ local.properties
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+.idea/misc.xml
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
