--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.1.1"
     }
     packagingOptions {
         resources {
@@ -74,44 +74,54 @@ android {
         }
     }
 	namespace 'org.androidbootmanager.app'
+    applicationVariants.configureEach {
+        tasks["merge${it.name.capitalize()}Assets"].dependsOn(setAssetTs)
+    }
 }
+
+task setAssetTs(type: Task) {
+    doLast {
+        file("$rootDir/app/src/main/assets/cp/_ts").text = System.currentTimeMillis() / 1000L
+    }
+}
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 	implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.navigation:navigation-fragment:2.4.0'
-    implementation 'androidx.navigation:navigation-ui:2.4.0'
+    implementation 'androidx.navigation:navigation-fragment:2.4.2'
+    implementation 'androidx.navigation:navigation-ui:2.4.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
-    implementation "androidx.compose.ui:ui:${compose_version}"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation "androidx.compose.ui:ui:1.1.1"
     // Tooling support (Previews, etc.)
-    implementation "androidx.compose.ui:ui-tooling:${compose_version}"
+    implementation "androidx.compose.ui:ui-tooling:1.1.1"
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation "androidx.compose.foundation:foundation:${compose_version}"
+    implementation "androidx.compose.foundation:foundation:1.1.1"
     // Material Design
-    implementation "androidx.compose.material:material:${compose_version}"
-    implementation "androidx.compose.material3:material3:1.0.0-alpha04"
+    implementation "androidx.compose.material:material:1.1.1"
+    implementation "androidx.compose.material3:material3:1.0.0-alpha10"
     // Material design icons
-    implementation "androidx.compose.material:material-icons-core:${compose_version}"
-    implementation "androidx.compose.material:material-icons-extended:${compose_version}"
+    implementation "androidx.compose.material:material-icons-core:1.1.1"
+    implementation "androidx.compose.material:material-icons-extended:1.1.1"
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.4.0'
     // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-beta01'
     // Integration with observables
-    implementation "androidx.compose.runtime:runtime-livedata:${compose_version}"
-    implementation "androidx.compose.runtime:runtime-rxjava2:${compose_version}"
+    implementation "androidx.compose.runtime:runtime-livedata:1.1.1"
+    implementation "androidx.compose.runtime:runtime-rxjava2:1.1.1"
 
-    implementation "androidx.navigation:navigation-compose:2.5.0-alpha01"
+    implementation "androidx.navigation:navigation-compose:2.5.0-beta01"
 
 
-    def libsuVersion = '3.2.1'
+    def libsuVersion = '5.0.1'
     implementation "com.github.topjohnwu.libsu:core:${libsuVersion}"
     implementation "com.github.topjohnwu.libsu:service:${libsuVersion}"
     implementation "com.github.topjohnwu.libsu:io:${libsuVersion}"
