--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext {
-        compose_version = '1.0.5'
-    }
     repositories {
 	    google()
         mavenCentral()
@@ -15,9 +12,9 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:7.2.0-rc02'
         classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.4.2"
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -35,5 +32,9 @@ allprojects {
 
     tasks.withType(JavaCompile) {
         options.compilerArgs << "-Xlint:all"
+    }
+
+    tasks.withType(org.jetbrains.kotlin.project.model.BasicKotlinModule) {
+        options.compilerArgs << "-Xopt-in=kotlin.RequiresOptIn"
     }
 }
