--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,9 +119,13 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-rxjava2:1.1.1"
 
     implementation "androidx.navigation:navigation-compose:2.5.0-beta01"
+	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+	implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+	androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+	debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
 
-    def libsuVersion = '5.0.1'
+	def libsuVersion = '5.0.1'
     implementation "com.github.topjohnwu.libsu:core:${libsuVersion}"
     implementation "com.github.topjohnwu.libsu:service:${libsuVersion}"
     implementation "com.github.topjohnwu.libsu:io:${libsuVersion}"
