--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,48 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+	xmlns:tools="http://schemas.android.com/tools">
 
-    <application
-        android:allowBackup="false"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:installLocation="internalOnly"
-        android:label="@string/app_name"
-        android:resizeableActivity="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="false"
-        android:theme="@style/AppTheme"
-        tools:ignore="DataExtractionRules"
-        tools:targetApi="s">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:enabled="false"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+	<application
+		android:allowBackup="false"
+		android:dataExtractionRules="@xml/data_extraction_rules"
+		android:icon="@mipmap/ic_launcher"
+		android:installLocation="internalOnly"
+		android:label="@string/app_name"
+		android:resizeableActivity="true"
+		android:roundIcon="@mipmap/ic_launcher_round"
+		android:supportsRtl="false"
+		android:theme="@style/AppTheme"
+		tools:ignore="DataExtractionRules"
+		tools:targetApi="s">
+		<activity
+			android:name=".WizardActivity"
+			android:exported="false"
+			android:label="@string/title_activity_wizard"
+			android:theme="@style/AppTheme" />
+		<activity
+			android:name=".MainActivity"
+			android:enabled="false"
+			android:exported="true"
+			android:label="@string/title_activity_main"
+			android:theme="@style/AppTheme">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".legacy.ui.debug.DebugActivity" />
-        <activity
-            android:name=".legacy.ui.wizard.WizardActivity"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".legacy.ui.activities.SplashActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".legacy.ui.debug.DebugActivity" />
+		<activity
+			android:name=".legacy.ui.wizard.WizardActivity"
+			android:theme="@style/AppTheme" />
+		<activity
+			android:name=".legacy.ui.activities.SplashActivity"
+			android:exported="true">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".legacy.ui.activities.MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar" />
-    </application>
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity
+			android:name=".legacy.ui.activities.MainActivity"
+			android:label="@string/title_activity_main"
+			android:theme="@style/AppTheme.NoActionBar" />
+	</application>
 
 </manifest>
