--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    repositories {
+    ext {
+	    compose_version = '1.1.1'
+    }
+	repositories {
 	    google()
         mavenCentral()
         maven {
@@ -12,7 +15,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0-rc02'
+        classpath 'com.android.tools.build:gradle:7.2.0'
         classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.4.2"
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
 
