--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,41 +86,41 @@ task setAssetTs(type: Task) {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-	implementation 'androidx.appcompat:appcompat:1.4.1'
+	implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.4.2'
-    implementation 'androidx.navigation:navigation-ui:2.4.2'
+    implementation 'androidx.navigation:navigation-fragment:2.5.1'
+    implementation 'androidx.navigation:navigation-ui:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation "androidx.compose.ui:ui:1.1.1"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation "androidx.compose.ui:ui:1.2.0"
     // Tooling support (Previews, etc.)
-    implementation "androidx.compose.ui:ui-tooling:1.1.1"
+    implementation "androidx.compose.ui:ui-tooling:1.2.0"
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation "androidx.compose.foundation:foundation:1.1.1"
+    implementation "androidx.compose.foundation:foundation:1.2.0"
     // Material Design
-    implementation "androidx.compose.material:material:1.1.1"
-    implementation "androidx.compose.material3:material3:1.0.0-alpha12"
+    implementation "androidx.compose.material:material:1.2.0"
+    implementation "androidx.compose.material3:material3:1.0.0-alpha15"
     // Material design icons
-    implementation "androidx.compose.material:material-icons-core:1.1.1"
-    implementation "androidx.compose.material:material-icons-extended:1.1.1"
+    implementation "androidx.compose.material:material-icons-core:1.2.0"
+    implementation "androidx.compose.material:material-icons-extended:1.2.0"
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.activity:activity-compose:1.5.1'
     // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha01'
     // Integration with observables
-    implementation "androidx.compose.runtime:runtime-livedata:1.1.1"
-    implementation "androidx.compose.runtime:runtime-rxjava2:1.1.1"
+    implementation "androidx.compose.runtime:runtime-livedata:1.2.0"
+    implementation "androidx.compose.runtime:runtime-rxjava2:1.2.0"
 
-    implementation "androidx.navigation:navigation-compose:2.5.0-rc01"
-	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-	implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-	androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-	debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    implementation "androidx.navigation:navigation-compose:2.5.1"
+	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+	implementation "androidx.compose.ui:ui-tooling-preview:1.2.0"
+	androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.0"
+	debugImplementation "androidx.compose.ui:ui-test-manifest:1.2.0"
 
 
 	def libsuVersion = '5.0.1'
