--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,13 @@
 		tools:targetApi="s">
 		<activity
 			android:name=".WizardActivity"
+			android:configChanges="density|fontScale|keyboard|keyboardHidden|layoutDirection|locale|mcc|mnc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|touchscreen|uiMode"
 			android:exported="false"
 			android:theme="@style/AppTheme" />
 		<activity
 			android:name=".MainActivity"
 			android:exported="true"
+			android:configChanges="keyboard|keyboardHidden|orientation"
 			android:theme="@style/AppTheme">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
