--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,39 @@
-org.gradle.jvmargs=-Xmx2G
+# Project-wide Gradle settings.
+# IDE (e.g. Android Studio) users:
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+org.gradle.parallel=true
+# AndroidX package structure to make it clearer which packages are bundled with the
+# Android operating system, and which are packaged with your app's APK
+# https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
+# Enables namespacing of each library's R class so that its R class includes only the
+# resources declared in the library itself and none from the library's dependencies,
+# thereby reducing the size of the R class for that library
+android.nonTransitiveRClass=true
+# Generate compile-time only R class for app modules
+android.enableAppCompileTimeRClass=true
+# Only keep the single relevant constructor for types mentioned in XML files
+# instead of using a parameter wildcard which keeps them all
+android.useMinimalKeepRules=true
+# Enable resource optimizations for release build
+android.enableResourceOptimizations=true
+# Gradle
+org.gradle.caching=true
+org.gradle.configureondemand=true
+# https://github.com/mikepenz/AboutLibraries/issues/857
+#org.gradle.configuration-cache=true
+# Use R8 in full mode instead of ProGuard compatibility mode.
+android.enableR8.fullMode=true
+# Build BuildConfig as Bytecode
+android.enableBuildConfigAsBytecode=true
