refactor & performance improvement

--- a/gradle.properties
+++ b/gradle.properties
@@ -37,3 +37,5 @@ org.gradle.configureondemand=true
 android.enableR8.fullMode=true
 # Build BuildConfig as Bytecode
 android.enableBuildConfigAsBytecode=true
+# https://github.com/Kotlin/kotlinx-atomicfu?tab=readme-ov-file#atomicfu-compiler-plugin
+kotlinx.atomicfu.enableJvmIrTransformation=true
